passed test fot Hp attack

--- a/views/play.erb
+++ b/views/play.erb
@@ -2,3 +2,7 @@
 
 <%= @player_1 %> : 100 Hp
 <%= @player_2 %> : 100 Hp
+
+<form action="/attack" method="get">
+  <input type="submit" value="Attacks">
+</form>
