passed test, ok button, hp reduces by 10

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,2 +1,6 @@
-<%= @player_1 %> Attacks <%= @player_2 %>
-<%= @player_1[hp] %>  HP   <%= @player_2[hp] %>
+
+<h1> <%= @player_1.name %> Attacks <%= @player_2.name %> </h1>
+<h1> FIGHT!!! </h1>
+<a href="/confirm_attack">OK</a>
+<h2><%= @player_1.name %>  Hp   <%= @player_1.hp %></h2>
+<h2><%= @player_2.name %>  Hp   <%= @player_2.hp %></h2>
